--- a/src/App.css
+++ b/src/App.css
@@ -3,16 +3,16 @@
   height: 100vh;
 }
 
-.scrollbar::-webkit-scrollbar {
+*::-webkit-scrollbar {
   width: 0.5em;
 }
 
-.scrollbar::-webkit-scrollbar-track {
-  /*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);*/
+*::-webkit-scrollbar-track {
+  /*-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.21);*/
 }
 
-.scrollbar::-webkit-scrollbar-thumb {
-  background-color: darkgrey;
+*::-webkit-scrollbar-thumb {
+  background-color: #c6c6c6;
   outline: 1px solid slategrey;
   border-radius: 10px;
 }
