--- a/src/Components/Mission.css
+++ b/src/Components/Mission.css
@@ -5,12 +5,13 @@
 }
 
 .mission-title {
+    font-size: 18px;
     margin-bottom: 8px;
 }
 
 .mission-description {
     padding: 8px;
-    color: rgba(158, 158, 158, 0.81);
+    color: rgb(68, 68, 68);
 }
 
 .done {
